[package]
name = "video_twibbon_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
sanitize-filename = "0.5"
which = "6"
anyhow = "1"
htmlescape = "0.3"
humantime = "2"

[profile.release]
lto = true
codegen-units = 1
